Pushing the newly added files

--- a/SDET_17/pom.xml
+++ b/SDET_17/pom.xml
@@ -56,4 +56,12 @@
 			<version>1.9.13</version>
 		</dependency>
 	</dependencies>
+	
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.7</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>
+		<aspectj.version>1.8.10</aspectj.version>
+	</properties>
+	
 </project>
